--- a/style.css
+++ b/style.css
@@ -1,6 +1,23 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,900,300&subset=latin,latin-ext);
 
-/* Browser Resets */
+/* --- Table of contents --- */
+/*
+- Browser Resets
+- General Styles
+- Bands Styles:
+	=Header
+	=Cover
+	=Navigation-primary
+	=subject
+	=navigation-secondary
+	=description
+	=gallery
+	=footer
+*/
+
+
+/* ### Browser Resets ### */
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,11 +41,13 @@ time, mark, audio, video {
 ul, li, ul li, ol, ol li {
 	padding: 0;
 }
-* {
+body * :not(.lbox-overlay) {
 	-webkit-box-sizing: border-box;;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+
+/* ### GENERAL STYLES ###*/
 
 body {
 	/*sizing for allegro*/
@@ -37,15 +56,34 @@ body {
 	margin: 0 auto;
 	/*font styles*/
 	font: 400 14px/18px "Lato", Helvetica, Arial, sans-serif;
-	color: 999;
 	text-align: left;
+
+	/*scrolling for mozilla*/
+    scroll-behavior: smooth;
 }
 h1 {
 
 }
 h2 {
-	font: 700 21px/21px "lato", Helvetica, Arial, sans-serif;
+	font: 800 28px/30px "lato", Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
+}
+h3 {
+	font: 700 21px/30px "lato", Helvetica, Arial, sans-serif;
+	text-transform: uppercase;
+}
+h4 {
+	font: 700 21px/18px "lato", Helvetica, Arial, sans-serif;
+	text-transform: uppercase;
+	padding-top: 18px;
+}
+p {
+	padding-top: 18px;
+}
+h2 + hr {
+	height: 6px;
+	background: url(../images/bg-hr.png) repeat-x 0 0;
+    border: 0;
 }
 .wrapper {
 	background: #fff;
@@ -70,9 +108,49 @@ h2 {
 	text-decoration:  none;
 	display: block;
 }
-.band {
-	padding: 32px 25px;
+
+.left-half{
+	float: left;
+	width: 50%;
+	padding-right: 25px;
 }
+.right-half{
+	float: right;
+	width: 50%;
+	padding-left: 25px;
+}
+.clear {
+	clear: both;
+}
+.band {
+	padding: 48px 88px 0px;
+}
+
+/* Highlight target anchor */
+[id]:nth-of-type(n+6):target > h2 {
+  animation: highlight 2s ease;
+}
+[id]:nth-of-type(n+6):target > hr {
+	animation: highlight-bg 1s ease;
+}
+@keyframes highlight-bg {
+	0% { background: #c00; }
+  100% { background: url(../images/bg-hr.png) repeat-x 0 0; }
+}
+@keyframes highlight {
+  0% { color: #c00; }
+  100% { color: black; }
+}
+.band:nth-of-type(n+6) > h2 {
+	transition: all 0.3s;     
+}
+
+
+
+/* ### BANDS STYLES ###*/
+
+/* =Header */
+
 .band.header {
 	padding-left: 0;
 	padding-right: 0;
@@ -90,52 +168,97 @@ h2 {
 	color: transparent;
 	text-align: center;
 }
-.band.header::after {
+
+/* =Cover */
+
+.band.cover {
+	padding-left: 0;
+	padding-right: 0;
+	height: 598px;
+	background: url(../images/cover1.jpg) bottom center no-repeat
+				transparent;
+
+	
+}
+.band.cover p{
+	text-align: center;
+	color: #fff;
+	font: 900 51px/51px "Lato", Helvetica, Arial, sans-serif;
+	text-transform: uppercase;
+	text-shadow: 2px 2px 2px rgba(0,0,0,0.8);
+}
+.band.cover::before, .band.cover::after {
 	content: "";
 	display: block;
 	position: relative;
-	bottom: -84px;
 
-	height: 2px;
+	height: 1px;
 	width: 100%;
-	background: rgba(204,204,204,1); /*Old browsers*/
-	background: -moz-linear-gradient(left,  rgba(204,204,204,1) 0%, rgba(204,204,204,0.2) 50%, rgba(204,204,204,1) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left,  rgba(204,204,204,1) 0%, rgba(204,204,204,0.2) 50%,rgba(204,204,204,1) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right,  rgba(204,204,204,1) 0%, rgba(204,204,204,0.1) 50%,rgba(204,204,204,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	background: rgba(0,0,0,0.5); /*Old browsers*/
+	background: -moz-linear-gradient(left,  rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 50%, rgba(0,0,0,0.5) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(left,  rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 50%,rgba(0,0,0,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to right,  rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 50%,rgba(0,0,0,0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cccccc', endColorstr='#cccccc',GradientType=1 ); /* IE6-9 */
-	
 }
-.band.cover {
-	background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/bg.gif)
-				#fff;
-	text-align: center;
-	color: rgba(0,0,0,0.1);
-	font: 900 51px/21px "Lato", Helvetica, Arial, sans-serif;
-	text-transform: uppercase;
+.band.cover::before {
+	bottom: 48px;
+
 }
+.band.cover::after {
+	bottom: -548px;
+}
+
+/* =Navigation-primary */
 
 .band.navigation.primary {
 	/*override defeault band padding*/
 	padding: 0;
 }
 .band.navigation.primary ul li a{
-	padding: 16px 12px;
+	padding: 24px 24px;
 
+	font-size: 21px;
+	font-weight: bold;
+	text-transform: uppercase;
 	color: #666;
 }
 .band.navigation.primary ul li a:hover {
 	background: #efefef;
 }
+
+/* =subject */
+
 .band.subject {
 	color: white;
 
 	background: rgb(204,0,0); /* Old browsers */
-	background: -moz-linear-gradient(left,  rgba(204,0,0,1) 0%, rgba(209,4,7,1) 37%, rgba(144,0,0,1) 99%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left,  rgba(204,0,0,1) 0%,rgba(209,4,7,1) 37%,rgba(144,0,0,1) 99%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right,  rgba(204,0,0,1) 0%,rgba(209,4,7,1) 37%,rgba(144,0,0,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	background: -moz-linear-gradient(left,  rgba(204,0,0,1) 0%, rgba(209,4,7,1) 24%, rgba(144,0,0,1) 99%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(left,  rgba(204,0,0,1) 0%,rgba(209,4,7,1) 24%,rgba(144,0,0,1) 99%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to right,  rgba(204,0,0,1) 0%,rgba(209,4,7,1) 24%,rgba(144,0,0,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc0000', endColorstr='#900000',GradientType=1 ); /* IE6-9 */
 }
+.band.subject h2, .band.subject h3, .band.subject h4 {
+	text-shadow: 2px 2px 1px rgba(0,0,0,0.3);
+}
+.band.subject h3 {
+	color: #ffd800;
+	font: 800 35px/38px "Lato", Helvetica, Arial, sans-serif;
+}
+.band.subject ul.quality li {
+	margin: 8px 0;
+	display: block;
 
+	width: 250px;
+	padding: 6px 6px 6px 35px;
+	border-radius: 2px;
+	box-shadow: 2px 2px 1px rgba(0,0,0,0.3);
+	background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/ok.png) left center no-repeat
+				#ffd800;
+
+	color: #000;
+}
+
+/* =navigation-secondary */
 .band.navigation.secondary {
 	/*override defeault band padding*/
 	padding: 0px;
@@ -153,18 +276,221 @@ h2 {
 	border-left: solid 1px #ccc;
 	border-right: solid 1px #ccc;
 }
+
+/* =description */
+
 .band.description {
-	background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/bg.gif)
+	/*background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/bg.gif)*/
 				#fff;
 }
+.band.description img {
+	margin-top: 18px;
+	border-radius: 4px;
+}
+.band.description ul.paliwa li {
+	display: inline-block;
+	margin-right: 24px;
+	margin-top: 12px;
+	padding: 72px 12px 6px 12px;
+	width: 98px;
+	height: 98px;
 
+	border: solid 2px rgb(0,0,0);
+	border-radius: 4px;
+	background: #000;
+
+	text-align: center;
+	font-weight: 800;
+	color: white;
+	text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
+}
+.band.description ul.paliwa.podajnik li:last-child {
+	padding-top: 54px;
+}
+.band.description ul.paliwa.podajnik li:nth-child(1) {
+	background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/paliwa/ekogroszek.jpg);
+}
+.band.description ul.paliwa.podajnik li:nth-child(2) {
+	background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/paliwa/mial.jpg) center center;
+}
+.band.description ul.paliwa.podajnik li:nth-child(3) {
+	background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/paliwa/ekoowies.jpg) center center repeat-y;
+	background-size: cover;
+}
+.band.description ul.paliwa.ruszt li:nth-child(1) {
+	background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/paliwa/wegiel_kamienny.jpg) center center;
+}
+.band.description ul.paliwa.ruszt li:nth-child(2) {
+	background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/paliwa/drewno.jpg) center center;
+}
+.band.description ul.paliwa.ruszt li:nth-child(3) {
+	background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/paliwa/brykiet.jpg) center center;
+}
 /* ... */
+
+/* =gallery */
+.band.gallery ul li {
+	list-style-type: none;
+/*	-webkit-box-sizing: content-box !important;
+	box-sizing: content-box !important;*/
+}
+
+/* 	
+	Lightbox styles
+*/
+.lbox-album{
+	width: 1022px;
+	margin-top: 24px;
+}
+.lbox-album li{
+	float: left;
+	margin: 5px;
+	position: relative;
+}
+.lbox-album li > a > img {
+	 width: 174px;
+}
+.lbox-album li > a,
+.lbox-album li > a img{
+	display: block;
+}
+.lbox-album li > a{
+	width: 194px;
+	height: 194px;
+	position: relative;
+	padding: 10px;
+	background: #eee;
+	box-shadow: 2px 2px 1px rgba(0,0,0,0.3);
+	border-radius: 4px;
+}
+.lbox-album li > a span{
+	position: absolute;
+	width: 184px;
+	height: 184px;
+	top: 0px;
+	left: 0px;
+	opacity: 0;
+
+	background: rgb(255,255,255);
+	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0.1) 100%);
+	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0.1) 100%);
+	background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0.1) 100%);
+	background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0.1) 100%);
+	background: radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0.1) 100%);
+
+	-webkit-transition: opacity 0.3s ease-out;
+	-moz-transition: opacity 0.3s ease-out;
+	-o-transition: opacity 0.3s ease-out;
+	-ms-transition: opacity 0.3s ease-out;
+	transition: opacity 0.3s ease-out;
+}
+.lbox-album li > a span img {
+	position: absolute;
+	top: 80px;
+	left: 80px;
+}
+.lbox-album li > a:hover span{
+	opacity: 0.5;
+}
+
+.lbox-overlay{
+	width: 0px;
+	height: 0px;
+	position: fixed;
+	overflow: hidden;
+	left: 0px;
+	top: 0px;
+	padding: 0px;
+	z-index: 99;
+	text-align: center;
+	background: rgba(255,255,255,0.8);
+}
+.lbox-overlay a.lbox-close{
+	background: #000;
+	z-index: 1001;
+	position: absolute;
+	top: 36px;
+	left: 50%;
+	overflow: hidden;
+	margin-left: -25px;
+	border-radius: 3px;
+
+	width: 102px;
+	height: 36px;
+
+	color: #fff;
+	font-size: 15px;
+	line-height: 34px;
+	text-align: center;
+	text-decoration: none;
+
+	opacity: 0;
+	box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+
+	-webkit-transition: opacity 0.3s linear;
+	-moz-transition: opacity 0.3s linear;
+	-o-transition: opacity 0.3s linear;
+	-ms-transition: opacity 0.3s linear;
+	transition: opacity 0.3s linear;
+}
+.lbox-prev, .lbox-next{
+	position: absolute;
+	width: 24px;
+	height: 25px;
+	top: 20%;
+	opacity: 0.8;
+	z-index: 1010
+}
+.lbox-prev {
+	left: 85px;
+}
+.lbox-next {
+	right: 85px;
+}
+.lbox-prev:hover, .lbox-next:hover{
+	opacity: 1;
+}
+.lbox-prev{
+	margin-left: -30px;
+}
+.lbox-next{
+	margin-left: 6px;
+}
+.lbox-overlay img{
+	max-height: 100%;
+	position: relative;
+	opacity: 0;
+	border-radius: 3px;
+	box-shadow: 0px 2px 7px rgba(0,0,0,0.6);
+	-webkit-transition: opacity 0.3s linear;
+	-moz-transition: opacity 0.3s linear;
+	-o-transition: opacity 0.3s linear;
+	-ms-transition: opacity 0.3s linear;
+	transition: opacity 0.3s linear;
+}
+.lbox-overlay:target {
+	width: auto;
+	height: auto;
+	bottom: 0px;
+	right: 0px;
+	padding: 80px 100px 120px 100px;
+}
+.lbox-overlay:target img{
+	opacity: 1;
+}
+.lbox-overlay:target a.lbox-close {
+	opacity: 0.5;
+}
+.lbox-overlay:target a.lbox-close:hover {
+	opacity: 1;
+}
+/* =footer */
 
 .band.footer {
 	background: rgb(51,51,51); /* Old browsers */
-	background: -moz-linear-gradient(left,  rgba(51,51,51,1) 0%, rgba(63,63,63,1) 37%, rgba(34,34,34,1) 99%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left,  rgba(51,51,51,1) 0%,rgba(63,63,63,1) 37%,rgba(34,34,34,1) 99%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right,  rgba(51,51,51,1) 0%,rgba(63,63,63,1) 37%,rgba(34,34,34,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	background: -moz-linear-gradient(left,  rgba(51,51,51,1) 0%, rgba(63,63,63,1) 24%, rgba(34,34,34,1) 99%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(left,  rgba(51,51,51,1) 0%,rgba(63,63,63,1) 24%,rgba(34,34,34,1) 99%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to right,  rgba(51,51,51,1) 0%,rgba(63,63,63,1) 24%,rgba(34,34,34,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333333', endColorstr='#222222',GradientType=1 ); /* IE6-9 */
 
 	color: #fff;
