--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@
 */
 
 
-/* ### Browser Resets ### */
+/* ### Browse r Resets ### */
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+small, strike, strong, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
@@ -61,6 +61,15 @@ body {
 	/*scrolling for mozilla*/
     scroll-behavior: smooth;
 }
+a {
+	color: #ffd800;
+}
+a:hover {
+	color: #fff;
+}
+a:active {
+	color: #FF0;
+}
 h1 {
 
 }
@@ -74,7 +83,6 @@ h3 {
 }
 h4 {
 	font: 700 21px/18px "lato", Helvetica, Arial, sans-serif;
-	text-transform: uppercase;
 	padding-top: 18px;
 }
 p {
@@ -131,11 +139,21 @@ h2 + hr {
   animation: highlight 2s ease;
 }
 [id]:nth-of-type(n+6):target > hr {
+	animation: highlight-hr-bg 1s ease;
+}
+
+[id]:nth-of-type(n+6):target  {
 	animation: highlight-bg 1s ease;
 }
-@keyframes highlight-bg {
+@keyframes highlight-hr-bg {
 	0% { background: #c00; }
   100% { background: url(../images/bg-hr.png) repeat-x 0 0; }
+}
+
+@keyframes highlight-bg {
+	0% 	 { background: #fff; }
+	35%  { background: rgba(204,0,0,.3); }
+	100% { background: #fff; }
 }
 @keyframes highlight {
   0% { color: #c00; }
@@ -146,18 +164,15 @@ h2 + hr {
 }
 
 
-
 /* ### BANDS STYLES ###*/
 
 /* =Header */
 
 .band.header {
-	padding-left: 0;
-	padding-right: 0;
+	padding: 0;
 	background: #fff;
-
-	margin-left: auto;
-	margin-right: auto;
+}
+h1.logo {
 	width: 100%;
 	height: 116px;
 	display: block;
@@ -174,7 +189,7 @@ h2 + hr {
 .band.cover {
 	padding-left: 0;
 	padding-right: 0;
-	height: 598px;
+	height: 732px;
 	background: url(../images/cover1.jpg) bottom center no-repeat
 				transparent;
 
@@ -187,43 +202,32 @@ h2 + hr {
 	text-transform: uppercase;
 	text-shadow: 2px 2px 2px rgba(0,0,0,0.8);
 }
-.band.cover::before, .band.cover::after {
-	content: "";
-	display: block;
-	position: relative;
-
-	height: 1px;
-	width: 100%;
-	background: rgba(0,0,0,0.5); /*Old browsers*/
-	background: -moz-linear-gradient(left,  rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 50%, rgba(0,0,0,0.5) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left,  rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 50%,rgba(0,0,0,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right,  rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 50%,rgba(0,0,0,0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cccccc', endColorstr='#cccccc',GradientType=1 ); /* IE6-9 */
-}
-.band.cover::before {
-	bottom: 48px;
-
-}
-.band.cover::after {
-	bottom: -548px;
-}
-
 /* =Navigation-primary */
 
 .band.navigation.primary {
 	/*override defeault band padding*/
 	padding: 0;
+	background: url(../images/texture.jpg);
+}
+.band.navigation.primary ul li {
+	width: 24%;
 }
 .band.navigation.primary ul li a{
-	padding: 24px 24px;
-
+	padding: 24px 0px;
+	
 	font-size: 21px;
 	font-weight: bold;
 	text-transform: uppercase;
-	color: #666;
+	color: #555;
+
+	-webkit-transition: all 0.2s ease-out;
+	-moz-transition: all 0.2s ease-out;
+	-o-transition: all 0.2s ease-out;
+	-ms-transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;
 }
-.band.navigation.primary ul li a:hover {
-	background: #efefef;
+.band.navigation.primary ul li a:hover, .band.navigation.primary ul li a:active {
+	background: rgba(255,255,255,0.5);
 }
 
 /* =subject */
@@ -231,10 +235,10 @@ h2 + hr {
 .band.subject {
 	color: white;
 
-	background: rgb(204,0,0); /* Old browsers */
-	background: -moz-linear-gradient(left,  rgba(204,0,0,1) 0%, rgba(209,4,7,1) 24%, rgba(144,0,0,1) 99%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left,  rgba(204,0,0,1) 0%,rgba(209,4,7,1) 24%,rgba(144,0,0,1) 99%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right,  rgba(204,0,0,1) 0%,rgba(209,4,7,1) 24%,rgba(144,0,0,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	background: rgb(144,0,0); /* Old browsers */
+	background: -moz-linear-gradient(left,  rgba(204,0,0,1) 0%, rgba(209,4,7,1) 21%, rgba(100,0,0,1) 99%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(left,  rgba(204,0,0,1) 0%,rgba(209,4,7,1) 21%,rgba(100,0,0,1) 99%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to right,  rgba(204,0,0,1) 0%,rgba(209,4,7,1) 21%,rgba(100,0,0,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc0000', endColorstr='#900000',GradientType=1 ); /* IE6-9 */
 }
 .band.subject h2, .band.subject h3, .band.subject h4 {
@@ -257,24 +261,37 @@ h2 + hr {
 
 	color: #000;
 }
-
 /* =navigation-secondary */
 .band.navigation.secondary {
 	/*override defeault band padding*/
 	padding: 0px;
+	/*background: url(../images/texture.jpg);*/
+
+	background: #ffd800;
+}
+.band.navigation.secondary ul li {
+	margin: 12px 25px;
 }
 .band.navigation.secondary ul li a{
-	padding: 16px 12px;
-	font-size: 12px;
-	border-left: solid 1px transparent;
-	border-right: solid 1px transparent;
-	color: #aaa;
+	padding: 6px 13px 6px 26px;
+	background: url(../images/chevron-down.png) left center no-repeat;
+	font-size: 15px;
+	border: solid 1px #555;
+	border-radius: 2px;
+	color: #444;
+
+	-webkit-transition: all 0.2s ease-out;
+	-moz-transition: all 0.2s ease-out;
+	-o-transition: all 0.2s ease-out;
+	-ms-transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;
 }
-.band.navigation.secondary ul li a:hover{
-	background: #efefef;
-	text-decoration: underline;
-	border-left: solid 1px #ccc;
-	border-right: solid 1px #ccc;
+.band.navigation.secondary ul li a:hover, .band.navigation.secondary ul li a:active{
+	background: url(../images/chevron-down.png) left center no-repeat
+					rgba(255,255,255,0.5);
+	color: #000;
+	/*text-decoration: underline;*/
+	border: solid 1px #000;
 }
 
 /* =description */
@@ -326,7 +343,20 @@ h2 + hr {
 .band.description ul.paliwa.ruszt li:nth-child(3) {
 	background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/paliwa/brykiet.jpg) center center;
 }
-/* ... */
+/* =why-we */
+
+.band.why-we ol li {
+	margin: 8px 0;
+	display: block;
+
+	padding: 6px 6px 6px 35px;
+	border-radius: 2px;
+	box-shadow: 2px 2px 1px rgba(0,0,0,0.3);
+	background: url(http://vps-1163492-9205.cp.homecloud.pl/termiko/images/ok.png) left center no-repeat
+				#ffd800;
+
+	color: #000;
+}
 
 /* =gallery */
 .band.gallery ul li {
@@ -348,15 +378,15 @@ h2 + hr {
 	position: relative;
 }
 .lbox-album li > a > img {
-	 width: 174px;
+	 width: 225px;
 }
 .lbox-album li > a,
 .lbox-album li > a img{
 	display: block;
 }
 .lbox-album li > a{
-	width: 194px;
-	height: 194px;
+	width: 245px;
+	height: 245px;
 	position: relative;
 	padding: 10px;
 	background: #eee;
@@ -365,8 +395,8 @@ h2 + hr {
 }
 .lbox-album li > a span{
 	position: absolute;
-	width: 184px;
-	height: 184px;
+	width: 245px;
+	height: 245px;
 	top: 0px;
 	left: 0px;
 	opacity: 0;
@@ -386,8 +416,8 @@ h2 + hr {
 }
 .lbox-album li > a span img {
 	position: absolute;
-	top: 80px;
-	left: 80px;
+	top: 100px;
+	left: 100px;
 }
 .lbox-album li > a:hover span{
 	opacity: 0.5;
@@ -435,17 +465,31 @@ h2 + hr {
 }
 .lbox-prev, .lbox-next{
 	position: absolute;
-	width: 24px;
-	height: 25px;
-	top: 20%;
+	width: 92px;
+	height: 48px;
+	top: 45%;
 	opacity: 0.8;
-	z-index: 1010
+	z-index: 1010;
+
+	border-radius: 4px;
+	background: #333;
+	padding: 5px;
+	color: #fff !important;
+	text-decoration: none;
+
+	box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+
+	-webkit-transition: opacity 0.3s linear;
+	-moz-transition: opacity 0.3s linear;
+	-o-transition: opacity 0.3s linear;
+	-ms-transition: opacity 0.3s linear;
+	transition: opacity 0.3s linear;
 }
 .lbox-prev {
-	left: 85px;
+	left: 50px;
 }
 .lbox-next {
-	right: 85px;
+	right: 25px;
 }
 .lbox-prev:hover, .lbox-next:hover{
 	opacity: 1;
@@ -487,6 +531,9 @@ h2 + hr {
 /* =footer */
 
 .band.footer {
+	padding-top: 0;
+	height: 415px;
+
 	background: rgb(51,51,51); /* Old browsers */
 	background: -moz-linear-gradient(left,  rgba(51,51,51,1) 0%, rgba(63,63,63,1) 24%, rgba(34,34,34,1) 99%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(left,  rgba(51,51,51,1) 0%,rgba(63,63,63,1) 24%,rgba(34,34,34,1) 99%); /* Chrome10-25,Safari5.1-6 */
@@ -494,4 +541,7 @@ h2 + hr {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333333', endColorstr='#222222',GradientType=1 ); /* IE6-9 */
 
 	color: #fff;
+}
+h4.kontakt {
+	text-align: center;
 }
